--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     <button class="menu-btn" onclick="toggleMenu()">☰ MENU</button>
   </header>
   <nav class="side-menu" id="sideMenu">
-    <a href="portfolioo.html">HOME</a>
+    <a href="index.html">HOME</a>
     <a href="about.html">ABOUT</a>
     <a href="gallery.html">GALLERY</a>
     <a href="movies.html">MOVIES</a>
